[gd_scene load_steps=3 format=3 uid="uid://6abxydid4np0"]

[ext_resource type="Script" uid="uid://dhyf7t0g6doej" path="res://scripts/main_menu.gd" id="1_sl1te"]
[ext_resource type="PackedScene" uid="uid://cy0th2qvkmn8y" path="res://scenes/ui/option_ui.tscn" id="2_option"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1te")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -50.5
offset_right = 53.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tiếp tục"

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Trò chơi mới"

[node name="Option" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cài đặt"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Thoát"

[node name="OptionUI" parent="." instance=ExtResource("2_option")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
